fix licence declaration

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name = Net-Async-Webservice-DHL
 author = Gianni Ceccarelli <gianni.ceccarelli@net-a-porter.com>
-license = Perl
+license = Perl_5
 copyright_holder = Net-a-porter
 copyright_year = 2014
 
