offline tests, sync capabilities

--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,22 @@ allow_dirty = dist.ini
 [NextRelease]
 
 [AutoPrereqs]
+skip = ^Net::Async
+skip = ^IO::Async
+skip = ^LWP
+
+[Prereqs / RuntimeRequires]
+Task::Weaken = 0
+
+[Prereqs / RuntimeRecommends]
+IO::Async::Loop = 0
+Net::Async::HTTP = 0
+LWP::UserAgent = 0
+
+[Prereqs / TestRecommends]
+IO::Async::Loop = 0
+Net::Async::HTTP = 0
+LWP::UserAgent = 0
 
 [PkgDist]
 
@@ -39,6 +55,8 @@ dir = scripts
 
 [ExtraTests]
 
+[Repository]
+
 [MetaNoIndex]
 directory = t/lib
 
@@ -49,6 +67,8 @@ directory = t/lib
 [MakeMaker]
 
 [Manifest]
+
+[License]
 
 [Git::Commit]
 
