--- a/dist.ini
+++ b/dist.ini
@@ -73,12 +73,16 @@ directory = t/lib
 [Git::Commit]
 
 [Git::CommitBuild]
+branch =
+release_branch = release/%b
+release_message = Dzil-build release %v (from %h on %b)
+multiple_inheritance = 1
 
 [Git::Tag / master]
 tag_format = %v%t-dzilla
 
-[Git::Tag / build]
-branch = build/master
+[Git::Tag / release]
+branch = release/master
 tag_format = %v%t
 
 [TestRelease]
