--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ skip = ^LWP
 
 [Prereqs / RuntimeRequires]
 Task::Weaken = 0
+DateTime::Format::ISO8601 = 0
 
 [Prereqs / RuntimeRecommends]
 IO::Async::Loop = 0
