--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ skip = ^LWP
 
 [Prereqs / RuntimeRequires]
 DateTime::Format::ISO8601 = 0
+Net::Async::Webservice::Common = 0
 
 [Prereqs / RuntimeRecommends]
 IO::Async::Loop = 0
