--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 author  = Gianni Ceccarelli <dakkar@thenautilus.net>
 license = Perl_5
 copyright_holder = Gianni Ceccarelli <dakkar@thenautilus.net>
-copyright_year   = 2014
+copyright_year   = 2015
 
 [GatherDir]
 
@@ -30,7 +30,7 @@ first_version = 0.0.1
 
 [ManifestSkip]
 
-[NoTabsTests]
+[Test::NoTabs]
 
 [PodCoverageTests]
 
