some updates from usage
- don't include dzil-specific files in distribution
- use OurPkgVersion instead of PkgVersion
- use Perl::Critic

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,8 @@ copyright_year   = 2015
 
 [PruneFiles]
 match = ~$
+filename = dist.ini
+filename = weaver.ini
 
 [Git::Check]
 allow_dirty = dist.ini
@@ -24,13 +26,13 @@ first_version = 0.0.1
 
 [AutoPrereqs]
 
-[PkgDist]
-
-[PkgVersion]
+[OurPkgVersion]
 
 [ManifestSkip]
 
 [Test::NoTabs]
+
+[Test::Perl::Critic]
 
 [PodCoverageTests]
 
