add the List Pod transformer to authordeps

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ copyright_year = 2014
 dir = share/dist/Net-Async-Webservice-DHL
 
 [PodWeaver]
+; authordep Pod::Elemental::Transformer::List
 
 [PruneCruft]
 
