--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name = Net-Async-Webservice-DHL
-author = Gianni Ceccarelli <gianni.ceccarelli@net-a-porter.com>
+author = Gianni Ceccarelli <dakkar@thenautilus.net>
 license = Perl_5
 copyright_holder = Net-a-porter
-copyright_year = 2014
+copyright_year = 2016
 
 [GatherDir]
 
